# MERIDA

./: CMakeLists.txt  CMakeLists_backup.txt  Example_Config1.txt  Example_Config2.txt  Example_Data_Matrix.txt  Example_IC50_file.txt  Example_Preselected_Features.txt  README.md
CV/: CrossValidator.cpp  CrossValidator.h  LogicalModelCrossValidator.cpp  LogicalModelCrossValidator.h
Feature_Creation/: Draw_stratified_test_set.R  README  alteration_matrix_container.py  cnv_mutation_annotator.py  find_available_cell_lines.py  preprocess_mut_cnv.py  subset_matrices.R  unite_matrices.R  z_score_binarization.R  z_score_calculation_train_test_separated.py
Feature_Creation/Mapping_Facility/: mapping_reader.py  useful_tools.py
Feature_Creation/Oncogenicity_Annotation/: query_oncogenicity_db.py
Feature_Creation/Preparation_of_Databases/: Drug_Variant_Annotations_Parsing_CGI.py  Drug_Variant_Annotations_Parsing_CIViC.py  Drug_Variant_Annotations_Parsing_COSMIC.py  Drug_Variant_Annotations_Parsing_oncoKB.py  Variant_Annotations_Parsing_CGI.py  Variant_Annotations_Parsing_CIViC.py  Variant_Annotations_Parsing_oncoKB.py  database_mapper.py  database_mapper2.py
Feature_Creation/Sensitivity_Annotation/: query_sensitivity_db.py
LogicalModel/: LogicalModel.cpp  LogicalModel.h
MERIDA_ILP/: MERIDA_ILP.cpp  MERIDA_ILP.h  main.cpp
Pathway/: Pathway.cpp  Pathway.h
RF_KNN/: Knn_classification.R  RF_classification.R
applications/: matrixTools.cpp  matrixTools.h
libraries/genetrail2/core/: AbstractMatrix.cpp  AbstractMatrix.h  DenseMatrix.cpp  DenseMatrix.h  DenseMatrixReader.cpp  DenseMatrixReader.h  DenseMatrixSubset.cpp  DenseMatrixSubset.h  DenseMatrixWriter.cpp  DenseMatrixWriter.h  Exception.cpp  Exception.h  Matrix.h  MatrixWriter.cpp  MatrixWriter_test.h  macros.h
